--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,6 +15,9 @@
             <h2><a href="">{{ post.title }}</a> </h2>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
+        <!--<div>
+            {{ Post }}
+        </div>-->
     {% endfor %}
 </body>
 </html>
